--- a/samplewebsite/templates/deployment.yaml
+++ b/samplewebsite/templates/deployment.yaml
@@ -33,17 +33,25 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          env:
+          - name: APP_CONFIG_CONNECTION
+            valueFrom:
+            secretKeyRef:
+              name: {{ include "samplewebsite.fullname" . }}
+              key: APP_CONFIG_CONNECTION
+          - name: KEY_VAULT_NAME
+            value: adme-we-kv
           ports:
             - name: http
               containerPort: 80
               protocol: TCP
           livenessProbe:
             httpGet:
-              path: /
+              path: /health
               port: http
           readinessProbe:
             httpGet:
-              path: /
+              path: /health
               port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
