--- a/samplewebsite/templates/secret.yaml
+++ b/samplewebsite/templates/secret.yaml
@@ -6,4 +6,4 @@ metadata:
     {{- include "samplewebsite.labels" . | nindent 4 }}
 type: Opaque
 data:
-  APP_CONFIG_CONNECTION: RW5kcG9pbnQ9aHR0cHM6Ly9qa2FwcGNvbmZpZy5hemNvbmZpZy5pbw== 
+  APP_CONFIG_CONNECTION: Endpoint=https://jkappconfig.azconfig.io;Id=Hyv5;Secret=ZafIQdMgZVdeozZjBkM3LhDz+bi8A6lmv+zx8j/a/6E=
