--- a/samplewebsite/values.yaml
+++ b/samplewebsite/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: jkadme.azurecr.io/privatelinktest
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "latest"
+  tag: "2"
 
 imagePullSecrets: []
 nameOverride: ""
