--- a/samplewebsite/templates/deployment.yaml
+++ b/samplewebsite/templates/deployment.yaml
@@ -34,6 +34,8 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
+          - name: ASPNETCORE_ENVIRONMENT
+            value: Development
           - name: APP_CONFIG_CONNECTION
             valueFrom:
               secretKeyRef:
